# Git-PR-Agent

./: .env.example  .gitignore  README.md  docker-compose.yml  pyproject.toml
app/: main.py
app/api/: routes.py
app/core/: config.py
app/models/: schemas.py
app/services/: agent_service.py  github_service.py  llm_service.py
client/: Dockerfile  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.js
client/src/: App.jsx  index.css
client/src/api/: client.js
client/src/components/: ActivityLog.jsx  BackgroundDecorations.jsx  BugAlert.jsx  Header.jsx  ProgressBar.jsx  ScannerCard.jsx
client/src/hooks/: useAnalysis.js  useAuth.js
client/src/pages/: DashboardPage.jsx  LandingPage.jsx
server/: .dockerignore  Dockerfile  Procfile  README.md  pyproject.toml  render.yaml
server/app/: main.py
server/app/api/: routes.py
server/app/core/: config.py
server/app/services/: agent_service.py  github_service.py  llm_service.py
static/: app.html  index.html
