[project]
name = "gitpr-ai"
version = "1.0.0"
description = "An autonomous AI agent that spots bugs in a repo and creates PRs to fix them."
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "fastapi>=0.109.2",
    "uvicorn>=0.27.1",
    "pydantic>=2.6.1",
    "pydantic-settings>=2.1.0",
    "PyGithub>=2.1.1",
    "openai>=1.12.0",
    "python-dotenv>=1.0.1",
]
